--- a/page1/about/main.css
+++ b/page1/about/main.css
@@ -39,6 +39,7 @@ h2{
 
 p{
     font-size: 20px;
+    color: rgb(0, 0, 0);
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
 }
