--- a/page1/page1/page1/final/main.css
+++ b/page1/page1/page1/final/main.css
@@ -40,7 +40,10 @@ img{
   width: 400px;
   height: 400px;
   padding-top: 50px;
+  max-width: 100%;
+  
 }
+
 
 .body-text{
   font-family: 'Times New Roman', Times, serif;
@@ -77,6 +80,7 @@ h3{
   width: 400px;
   height: 400px;
   padding-top: 60px;
+  max-width: 100%;
   margin-left: auto;
   margin-bottom: auto;
   display: block;
