--- a/final/main.css
+++ b/final/main.css
@@ -225,13 +225,13 @@ h6{
 }
 
 .image4 {
-  width: 700px;
+  width: 100%;
+  max-width: 700px; 
   height: auto;
   display: block;
   margin: 0 auto;
   object-fit: cover;
   padding-top: 85px;
-
 }
 
 
